src/objects/Be_Dynamic_Table_Presentation__mdt.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns_Table_Configuration__c</fullName>
        <label>Columns Table Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <label>Filters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Dynamic Table Presentation</label>
    <pluralLabel>Dynamic Table Presentations</pluralLabel>
</CustomObject>